# AnLibrary

./: .gitignore  Readme.md  build.gradle  settings.gradle
AnArch/: build.gradle
AnArch/src/main/: AndroidManifest.xml
AnUpdate/: build.gradle
AnUpdate/src/main/: AndroidManifest.xml
Androidx/: build.gradle
Androidx/src/main/: AndroidManifest.xml
HCNetSDK/: build.gradle
HCNetSDK/src/main/: AndroidManifest.xml
HCNetSDK/src/main/cpp/: CMakeLists.txt  hcnetsdk.cpp
Hook/: build.gradle
Hook/src/main/: AndroidManifest.xml
Hook/src/main/assets/: xposed_init
PlateOCR/: build.gradle
PlateOCR/src/main/: AndroidManifest.xml
PlateOCR/src/main/cpp/: CMakeLists.txt  javaWarpper.cpp
PlateOCR/src/main/cpp/include/: Pipeline.h  PlateDetection.h  PlateSegmentation.h  Recognizer.h  SegmentationFreeRecognizer.h  niBlackThreshold.h
SuperInput/: build.gradle
SuperInput/src/main/: AndroidManifest.xml
ambulance/: ambulance.jks  build.gradle
ambulance/release/: output-metadata.json
ambulance/src/main/: AndroidManifest.xml
ambulance/src/main/assets/: ambulance.json  ambulance_2画面.json
ambulanceExport/: build.gradle
ambulanceExport/src/main/: AndroidManifest.xml
ambulanceLib/: build.gradle
ambulanceLib/src/main/: AndroidManifest.xml
app/: build.gradle
cSource/: build_android_ffmpeg.sh
cSource/ffmpeg-4.2.2/: build.sh  config.h  configure
cSource/ffmpeg-4.2.2/doc/: config.texi
cSource/ffmpeg-4.2.2/libavcodec/: codec_list.c  libavcodec.pc
cSource/ffmpeg-4.2.2/libavdevice/: libavdevice.so.58
cSource/ffmpeg-4.2.2/libavfilter/: libavfilter.pc
cSource/ffmpeg-4.2.2/libavformat/: libavformat.pc
cSource/ffmpeg-4.2.2/libavutil/: libavutil.pc  libavutil.so.56
cSource/ffmpeg-4.2.2/libswresample/: libswresample.pc  libswresample.so.3
cSource/ffmpeg-4.2.2/libswscale/: libswscale.pc  libswscale.so.5
ffmpegLibrary422/: build.gradle
ffmpegLibrary422/src/main/cpp/: CMakeLists.txt  copy_headers.cmake  (+5 more)
gradle/wrapper/: gradle-wrapper.properties
ijkplayer/: build.gradle
ijkplayer/src/main/: AndroidManifest.xml
rtmpdumpLibrary23/: build.gradle
rtmpdumpLibrary23/src/main/: AndroidManifest.xml
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
screenshot/: build.gradle
screenshot/src/main/: AndroidManifest.xml
sdk/: local.properties
sdk/libcxx_helper/: CMakeLists.txt  OpenCVUtils.cpp
topplayer/: build.gradle
topplayer/src/main/: AndroidManifest.xml
(+754 files in other folders)
